Bug 106694 - FILEOPEN: RTF: Incorrect TOC's numbers positions
Summary: FILEOPEN: RTF: Incorrect TOC's numbers positions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0 target:5.3.3
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2017-03-22 11:36 UTC by Xisco Faulí
Modified: 2017-03-30 10:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-03-22 11:36:04 UTC
This is a follow-up bug of bug 105729
Steps to reproduce:
1. Open attachment 93817 [details] from bug 74817
1b. Open attachment 131351 [details] from bug 105729

Expected behaviour: Toc's numbers should be aligned to the right

Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: 4ba483beccc99d336d0e0bec47b5fd6823b16c16
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-03-22 11:37:45 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 07:49:43 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-01-03 10:56:29 (GMT)
commit a9e029ace41562e28e9242d63230ad1ca275f5d3 (patch)
tree 605fee980e467c8a5896bdf5053fd7422865091a
parent c9c5c94771f22919ec82351b3b9b3096af96a508 (diff)
tdf#104744 RTF import: fix unexpected zero para left margin wrt style dedup
See commit 1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305:
writerfilter RTF import: override style properties like Word,
2014-06-17) for the details on style override in RTF.

Here the problem was that we added an unneeded "reset to 0" property, the
opposite situation that commit 657c6cc3acec0528209a8584b838cd6de581c437
(tdf#104228 RTF import: fix override of style left/right para margin,
2016-12-13) was fixing (there a "reset to 0" was missing).

Adding Cc: to Miklos Vajna
Comment 2 Miklos Vajna 2017-03-24 16:00:04 UTC
Yes, I see the problem. The position is determined where is the first tab position for the paragraph, and on master tab positions are lost during import.
Comment 3 Commit Notification 2017-03-28 10:12:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fea174753b1c6b0882aebb044bf1a1eef6fa50e0

tdf#106694 RTF import: fix missing paragraph tab position

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2017-03-30 10:50:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4370a2f96dd117f4e87291e5a8493f3413dc191a&h=libreoffice-5-3

tdf#106694 RTF import: fix missing paragraph tab position

It will be available in 5.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.